Samstag, 4.1. vom Ipad

--- a/IMS2020_Kapitel_1.ipynb
+++ b/IMS2020_Kapitel_1.ipynb
@@ -15,6 +15,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "auf dem ipad geschrieben"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -24,9 +31,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:nlp] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-nlp-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -38,7 +45,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   },
   "varInspector": {
    "cols": {
