--- a/IMS2020_Kapitel_1.ipynb
+++ b/IMS2020_Kapitel_1.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hide_input": false
+   },
    "source": [
     "### Kapitel 1"
    ]
@@ -26,7 +28,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bp_data = pd.read_csv(\"path/to/file.csv\", header=1, delim_whitespace=True)"
+   ]
   }
  ],
  "metadata": {
