--- a/IMS2020_Kapitel_1.ipynb
+++ b/IMS2020_Kapitel_1.ipynb
@@ -14,7 +14,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Kapitel 1\") "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -25,12 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bp_data = pd.read_csv(\"path/to/file.csv\", header=1, delim_whitespace=True)"
+    "# auf Linux geschrieben"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -49,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   },
   "varInspector": {
    "cols": {
