--- a/IMS2020_Main.ipynb
+++ b/IMS2020_Main.ipynb
@@ -10,37 +10,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'IMS2020_Kapitel_1'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-b529ea3752bd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mIMS2020_Kapitel_1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mipynb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'IMS2020_Kapitel_1'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kapitel 1\n"
      ]
     }
    ],
    "source": [
-    "import IMS2020_Kapitel_1.ipynb # import noch nicht verstanden"
+    "%run IMS2020_Kapitel_1.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\mjkoehler\\\\Documents\\\\Python Scripts\\\\ims2020\\\\ims2020'"
+       "'/home/martin/Dokumente/ims2020'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
