--- a/IMS2020_Kapitel_1.ipynb
+++ b/IMS2020_Kapitel_1.ipynb
@@ -347,6 +347,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run Kap_01_functions.py"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
