--- a/Kap03_funktions.ipynb
+++ b/Kap03_funktions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,8 +66,235 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Usage:   \n",
+      "  pip install [options] <requirement specifier> [package-index-options] ...\n",
+      "  pip install [options] -r <requirements file> [package-index-options] ...\n",
+      "  pip install [options] [-e] <vcs project url> ...\n",
+      "  pip install [options] [-e] <local project path> ...\n",
+      "  pip install [options] <archive url/path> ...\n",
+      "\n",
+      "Description:\n",
+      "  Install packages from:\n",
+      "  \n",
+      "  - PyPI (and other indexes) using requirement specifiers.\n",
+      "  - VCS project urls.\n",
+      "  - Local project directories.\n",
+      "  - Local or remote source archives.\n",
+      "  \n",
+      "  pip also supports installing from \"requirements files\", which provide\n",
+      "  an easy way to specify a whole environment to be installed.\n",
+      "\n",
+      "Install Options:\n",
+      "  -r, --requirement <file>    Install from the given requirements file. This\n",
+      "                              option can be used multiple times.\n",
+      "  -c, --constraint <file>     Constrain versions using the given constraints\n",
+      "                              file. This option can be used multiple times.\n",
+      "  --no-deps                   Don't install package dependencies.\n",
+      "  --pre                       Include pre-release and development versions. By\n",
+      "                              default, pip only finds stable versions.\n",
+      "  -e, --editable <path/url>   Install a project in editable mode (i.e.\n",
+      "                              setuptools \"develop mode\") from a local project\n",
+      "                              path or a VCS url.\n",
+      "  -t, --target <dir>          Install packages into <dir>. By default this\n",
+      "                              will not replace existing files/folders in\n",
+      "                              <dir>. Use --upgrade to replace existing\n",
+      "                              packages in <dir> with new versions.\n",
+      "  --platform <platform>       Only use wheels compatible with <platform>.\n",
+      "                              Defaults to the platform of the running system.\n",
+      "  --python-version <python_version>\n",
+      "                              Only use wheels compatible with Python\n",
+      "                              interpreter version <version>. If not specified,\n",
+      "                              then the current system interpreter minor\n",
+      "                              version is used. A major version (e.g. '2') can\n",
+      "                              be specified to match all minor revs of that\n",
+      "                              major version.  A minor version (e.g. '34') can\n",
+      "                              also be specified.\n",
+      "  --implementation <implementation>\n",
+      "                              Only use wheels compatible with Python\n",
+      "                              implementation <implementation>, e.g. 'pp',\n",
+      "                              'jy', 'cp',  or 'ip'. If not specified, then the\n",
+      "                              current interpreter implementation is used.  Use\n",
+      "                              'py' to force implementation-agnostic wheels.\n",
+      "  --abi <abi>                 Only use wheels compatible with Python abi\n",
+      "                              <abi>, e.g. 'pypy_41'.  If not specified, then\n",
+      "                              the current interpreter abi tag is used.\n",
+      "                              Generally you will need to specify\n",
+      "                              --implementation, --platform, and --python-\n",
+      "                              version when using this option.\n",
+      "  --user                      Install to the Python user install directory for\n",
+      "                              your platform. Typically ~/.local/, or\n",
+      "                              %APPDATA%\\Python on Windows. (See the Python\n",
+      "                              documentation for site.USER_BASE for full\n",
+      "                              details.)\n",
+      "  --root <dir>                Install everything relative to this alternate\n",
+      "                              root directory.\n",
+      "  --prefix <dir>              Installation prefix where lib, bin and other\n",
+      "                              top-level folders are placed\n",
+      "  -b, --build <dir>           Directory to unpack packages into and build in.\n",
+      "                              Note that an initial build still takes place in\n",
+      "                              a temporary directory. The location of temporary\n",
+      "                              directories can be controlled by setting the\n",
+      "                              TMPDIR environment variable (TEMP on Windows)\n",
+      "                              appropriately. When passed, build directories\n",
+      "                              are not cleaned in case of failures.\n",
+      "  --src <dir>                 Directory to check out editable projects into.\n",
+      "                              The default in a virtualenv is \"<venv\n",
+      "                              path>/src\". The default for global installs is\n",
+      "                              \"<current dir>/src\".\n",
+      "  -U, --upgrade               Upgrade all specified packages to the newest\n",
+      "                              available version. The handling of dependencies\n",
+      "                              depends on the upgrade-strategy used.\n",
+      "  --upgrade-strategy <upgrade_strategy>\n",
+      "                              Determines how dependency upgrading should be\n",
+      "                              handled [default: only-if-needed]. \"eager\" -\n",
+      "                              dependencies are upgraded regardless of whether\n",
+      "                              the currently installed version satisfies the\n",
+      "                              requirements of the upgraded package(s). \"only-\n",
+      "                              if-needed\" -  are upgraded only when they do not\n",
+      "                              satisfy the requirements of the upgraded\n",
+      "                              package(s).\n",
+      "  --force-reinstall           Reinstall all packages even if they are already\n",
+      "                              up-to-date.\n",
+      "  -I, --ignore-installed      Ignore the installed packages (reinstalling\n",
+      "                              instead).\n",
+      "  --ignore-requires-python    Ignore the Requires-Python information.\n",
+      "  --no-build-isolation        Disable isolation when building a modern source\n",
+      "                              distribution. Build dependencies specified by\n",
+      "                              PEP 518 must be already installed if this option\n",
+      "                              is used.\n",
+      "  --use-pep517                Use PEP 517 for building source distributions\n",
+      "                              (use --no-use-pep517 to force legacy behaviour).\n",
+      "  --install-option <options>  Extra arguments to be supplied to the setup.py\n",
+      "                              install command (use like --install-option=\"--\n",
+      "                              install-scripts=/usr/local/bin\"). Use multiple\n",
+      "                              --install-option options to pass multiple\n",
+      "                              options to setup.py install. If you are using an\n",
+      "                              option with a directory path, be sure to use\n",
+      "                              absolute path.\n",
+      "  --global-option <options>   Extra global options to be supplied to the\n",
+      "                              setup.py call before the install command.\n",
+      "  --compile                   Compile Python source files to bytecode\n",
+      "  --no-compile                Do not compile Python source files to bytecode\n",
+      "  --no-warn-script-location   Do not warn when installing scripts outside PATH\n",
+      "  --no-warn-conflicts         Do not warn about broken dependencies\n",
+      "  --no-binary <format_control>\n",
+      "                              Do not use binary packages. Can be supplied\n",
+      "                              multiple times, and each time adds to the\n",
+      "                              existing value. Accepts either :all: to disable\n",
+      "                              all binary packages, :none: to empty the set, or\n",
+      "                              one or more package names with commas between\n",
+      "                              them. Note that some packages are tricky to\n",
+      "                              compile and may fail to install when this option\n",
+      "                              is used on them.\n",
+      "  --only-binary <format_control>\n",
+      "                              Do not use source packages. Can be supplied\n",
+      "                              multiple times, and each time adds to the\n",
+      "                              existing value. Accepts either :all: to disable\n",
+      "                              all source packages, :none: to empty the set, or\n",
+      "                              one or more package names with commas between\n",
+      "                              them. Packages without binary distributions will\n",
+      "                              fail to install when this option is used on\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              them.\n",
+      "  --prefer-binary             Prefer older binary packages over newer source\n",
+      "                              packages.\n",
+      "  --no-clean                  Don't clean up build directories.\n",
+      "  --require-hashes            Require a hash to check each requirement\n",
+      "                              against, for repeatable installs. This option is\n",
+      "                              implied when any package in a requirements file\n",
+      "                              has a --hash option.\n",
+      "  --progress-bar <progress_bar>\n",
+      "                              Specify type of progress to be displayed\n",
+      "                              [off|on|ascii|pretty|emoji] (default: on)\n",
+      "\n",
+      "Package Index Options:\n",
+      "  -i, --index-url <url>       Base URL of Python Package Index (default\n",
+      "                              https://pypi.org/simple). This should point to a\n",
+      "                              repository compliant with PEP 503 (the simple\n",
+      "                              repository API) or a local directory laid out in\n",
+      "                              the same format.\n",
+      "  --extra-index-url <url>     Extra URLs of package indexes to use in addition\n",
+      "                              to --index-url. Should follow the same rules as\n",
+      "                              --index-url.\n",
+      "  --no-index                  Ignore package index (only looking at --find-\n",
+      "                              links URLs instead).\n",
+      "  -f, --find-links <url>      If a url or path to an html file, then parse for\n",
+      "                              links to archives. If a local path or file://\n",
+      "                              url that's a directory, then look for archives\n",
+      "                              in the directory listing.\n",
+      "\n",
+      "General Options:\n",
+      "  -h, --help                  Show help.\n",
+      "  --isolated                  Run pip in an isolated mode, ignoring\n",
+      "                              environment variables and user configuration.\n",
+      "  -v, --verbose               Give more output. Option is additive, and can be\n",
+      "                              used up to 3 times.\n",
+      "  -V, --version               Show version and exit.\n",
+      "  -q, --quiet                 Give less output. Option is additive, and can be\n",
+      "                              used up to 3 times (corresponding to WARNING,\n",
+      "                              ERROR, and CRITICAL logging levels).\n",
+      "  --log <path>                Path to a verbose appending log.\n",
+      "  --proxy <proxy>             Specify a proxy in the form\n",
+      "                              [user:passwd@]proxy.server:port.\n",
+      "  --retries <retries>         Maximum number of retries each connection should\n",
+      "                              attempt (default 5 times).\n",
+      "  --timeout <sec>             Set the socket timeout (default 15 seconds).\n",
+      "  --exists-action <action>    Default action when a path already exists:\n",
+      "                              (s)witch, (i)gnore, (w)ipe, (b)ackup, (a)bort.\n",
+      "  --trusted-host <hostname>   Mark this host as trusted, even though it does\n",
+      "                              not have valid or any HTTPS.\n",
+      "  --cert <path>               Path to alternate CA bundle.\n",
+      "  --client-cert <path>        Path to SSL client certificate, a single file\n",
+      "                              containing the private key and the certificate\n",
+      "                              in PEM format.\n",
+      "  --cache-dir <dir>           Store the cache data in <dir>.\n",
+      "  --no-cache-dir              Disable the cache.\n",
+      "  --disable-pip-version-check\n",
+      "                              Don't periodically check PyPI to determine\n",
+      "                              whether a new version of pip is available for\n",
+      "                              download. Implied with --no-index.\n",
+      "  --no-color                  Suppress colored output\n",
+      "\r"
+     ]
+    }
+   ],
    "source": [
-    "help(pd.set_option)"
+    "!pip install --help"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy"
    ]
   },
   {
@@ -75,7 +302,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%pip install statsmodels==0.9.0"
+   ]
   }
  ],
  "metadata": {
